@@ -276,7 +276,7 @@ runAbsoluteCN <- function(normal.coverage.file = NULL,
     min.variants.segment = 5, log.ratio.calibration = 0.1, smooth.log.ratio = TRUE, 
     remove.off.target.snvs = NULL, model.homozygous = FALSE, error = 0.001, 
     gc.gene.file = NULL, max.dropout = c(0.95, 1.1), 
-    min.logr.sdev = 0.15, max.logr.sdev = 0.75, 
+    min.logr.sdev = 0.15, max.logr.sdev = 0.6, 
     max.segments = 300, min.gof = 0.8, plot.cnv = TRUE, 
     cosmic.vcf.file = NULL, model = c("beta", "betabin"),
     post.optimize = FALSE, log.file = NULL, verbose = TRUE) {
@@ -780,6 +780,10 @@ runAbsoluteCN <- function(normal.coverage.file = NULL,
                   opt.C[opt.C < 0] <- 0
                   if (id > length(test.num.copy)) {
                     # optimal non-integer copy number
+                    C[i] <- opt.C[i]
+                    subclonal[i] <- TRUE
+                  } else if (test.num.copy[id] == max(test.num.copy) && 
+                             opt.C[i] > test.num.copy[id] + 1) {
                     C[i] <- opt.C[i]
                     subclonal[i] <- TRUE
                   } else {
