@@ -2,12 +2,14 @@ Changes in version 1.10.0
 -------------------------
 
     o More accurate confidence intervals in callMutationBurden
+    o More accurate copy numbers for high-level amplifications 
     o Code cleanups (switch to testthat, removed several obsolete and minor features)
     
 API CHANGES
 
     o plotAbs ids changed to id (this function now only plots a single
       purity/ploidy solution)
+    o changed default of runAbsoluteCN max.logr.sdev to 0.6 (from 0.75)
 
 
 
